# izan-crypto

./: CMakeLists.txt  README.md
core/crypto/: eip712.cpp  eip712.hpp  sol.cpp  sol.hpp
domain/sol/: sol_tx.cpp  sol_tx.hpp
tests/: btc_tx_test.cpp  eip712_test.cpp  sol_tx_test.cpp
